<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="allowing_this_permission_will_help">Allowing this permission will help us improve
        your app experience. You can turn it off later at any time from Settings.</string>
    <string name="ok">OK</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="select_all">Select All</string>
    <string name="all_files_title">All Files</string>
    <string name="files_title">Files</string>
    <string name="permission_error">Please grant file read write permission from settings to proceed further.</string>
    <string name="date_format1">dd MMMM yyyy</string>
    <string name="backup_error1">%d Folders are not backup</string>
    <string name="backup_error_actiontext1">BACKUP NOW</string>
    <string name="backup_success1">All files and folders are up to date.</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="backup_now">Backup Now</string>
    <string name="cloud_storage_title">Cloud Storage</string>
    <string name="manage_cloud_storage">Manage</string>
    <string name="space_consumed_title">Space Consumed</string>
    <string name="space_consumed_value">%dMB Consumed</string>
    <string name="total_value">Out of %dGB</string>
    <string name="no_backups_title">No Backups yet</string>
    <string name="no_backups_desc">Keep your files or folders secure with Airtel Backup.</string>
    <string name="try_now">Try Now</string>
    <string name="new_folder">New Folder</string>
    <string name="cancel_folder">Cancel</string>
    <string name="create_folder">Create</string>
    <string name="create_folder_hint">Folder Name</string>
    <string name="more_options">More</string>
    <string name="more_option_1">Create New Folder</string>
    <string name="more_option_2">Upload File or Folder</string>
    <string name="more_option_3">Get Info</string>
    <string name="more_option_4">Remove</string>
</resources>
