<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff">
    <TextView
        android:id="@+id/headerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/cloud_storage_title"
        android:textSize="16sp"
        android:fontFamily="@font/tondo_bold"
        android:textColor="@color/color_656566"/>
    <TextView
        android:id="@+id/headerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/manage_cloud_storage"
        android:textSize="12sp"
        android:fontFamily="@font/tondo_bold"
        android:textColor="@color/color_656566"
        android:textAllCaps="true"
        android:enabled="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/headerCardViewParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLeft"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="6dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp12">
            <TextView
                android:id="@+id/spaceConsumedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/space_consumed_title"
                android:textSize="12sp"
                android:fontFamily="@font/tondo_bold"
                android:textColor="@color/color_212121"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spaceConsumedTitle"
                android:layout_marginTop="12dp"
                android:progress="50"/>
            <TextView
                android:id="@+id/spaceConsumedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar"
                tools:text="@string/space_consumed_value"
                android:textSize="12sp"
                android:fontFamily="@font/tondo_bold"
                android:textColor="@color/color_393939"/>
            <TextView
                android:id="@+id/totalSpaceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar"
                tools:text="@string/total_value"
                android:textSize="12sp"
                android:fontFamily="@font/tondo_bold"
                android:textColor="@color/color_393939"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>