<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">
        <TextView
            android:id="@+id/newFolderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/new_folder"
            android:textSize="20sp"
            android:fontFamily="@font/tondo_bold"
            android:textColor="@color/color_393939"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newFolderEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@id/newFolderTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_bg_blue_outline"
            android:padding="10dp">
            <EditText
                android:id="@+id/newFolderEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/tondo_regular"
                android:textColor="@color/color_393939"
                android:background="@null"
                android:hint="@string/create_folder_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/createBtn"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/newFolderEdit"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/create_folder"
            android:textSize="14sp"
            android:fontFamily="@font/tondo_bold"
            android:textColor="@color/color_ffffff"
            android:background="@drawable/rounded_bg_blue"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp12"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toTopOf="@id/createBtn"
            app:layout_constraintEnd_toStartOf="@id/createBtn"
            android:text="@string/cancel_folder"
            android:textSize="14sp"
            android:fontFamily="@font/tondo_bold"
            android:textColor="@color/color_696969"
            android:background="@drawable/rounded_bg_grey_outline"
            android:textAllCaps="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>